[package]
name = "hero"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "=0.5.0-rc.3"
futures = "=0.3.28"
tokio = { version = "=1.33.0", features = ["full"]}
utoipa = { version = "4.0.0", features = ["rocket_extras", "yaml"]}
utoipa-swagger-ui = { version = "4.0.0", features = ["rocket", "debug-embed"] }

